--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,6 @@
 *.sqlite
-*.rbc
-.bundle
-.config
-.yardoc
 Gemfile.lock
-InstalledFiles
-_yardoc
 coverage
-doc/
-lib/bundler/man
 pkg
-rdoc
-spec/reports
-test/tmp
-test/version_tmp
-tmp
+spec/dummy/log
+spec/dummy/tmp/
